--- a/style.css
+++ b/style.css
@@ -13,20 +13,21 @@ body{
 
 h2{
     font-size: 45px;
-    font-weight: 300;
+    font-weight: 200;
     margin: 10px;
 }
 h2 > span{
     font-size: 30px;
 }
 p{
-    font-size: 20px;
+    font-size: 18px;
 
 }
 .container{
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    grid-gap: 7px;
+    /* grid-gap: 7px; */
+    gap: 8px;
     height: 100vh;
 }
 .container > div{
@@ -41,7 +42,7 @@ p{
     transition: all 0.3s ease-in-out ;
 }
 .container >  div:hover{
-    opacity: 0.7;
+    opacity: 0.75;
     transform: scale(0.98);
 }
 .container > div:nth-of-type(1){
